# TDCI

./: .gitignore  Cargo.toml  LICENSE  README.md  code.py
benches/: my_benchmark.rs
docs/images/: S.md  mol.md
python/: CISD.py  FCIvsRLCIvsCISD.ipynb  excitation .ipynb  helper.rs  helper_CI.py  o.py  study.py  test.py  trans.py
scripts/: CISD.py  FCIvsRLCIvsCISD-Copy1.ipynb  RLCI.py  excitation -Copy1.ipynb
src/: main.rs
src/modules/: beta.rs  configurations.rs  fast.rs  h_build.rs  psi4.rs  read_write.rs  rlci.rs  second_quantization.rs  transform.rs
src/modules/lib/: beta.rs  beta128.rs  beta512.rs  configurations128.rs  configurations512.rs  read_write.rs  second_quantization.rs  transform.rs
