[package]
name = "TDCI"
version = "0.1.0"
authors = ["Ojas Singh <singhojas007@gmail.com>"]
repository = "https://github.com/Ojas-Singh/TDCI/"
readme = "README.md"
description = """Fastest Configuration Interaction Program 
                on the planet (soon)."""
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.release]
lto = "fat"
codegen-units=1
panic = "abort"


[dependencies]
colored = "2.0.0"
num = "0.4"
num-iter = "0.1.42"
typenum = "1.13.0"
bit-array = "0.4.4"
rayon = "1.5.1"
mimalloc = { version = "0.1.26", default-features = false }
sysinfo = "0.19.2"
