[package]
name = "TDCI"
version = "0.1.0"
authors = ["Ojas Singh <singhojas007@gmail.com>"]
repository = "https://github.com/Ojas-Singh/TDCI/"
readme = "README.md"
description = """Fastest Configuration Interaction Program 
                on the planet (soon)."""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3.5"
rand = "0.8.4"

[[bench]]
name = "my_benchmark"
harness = false

[profile.release]
lto = "fat"
codegen-units=1
panic = "abort"


[dependencies]
colored = "2.0.0"
num = "0.4.0"
num-iter = "0.1.42"
typenum = "1.14.0"
bit-array = "0.4.4"
rayon = "1.5.1"
mimalloc = { version = "0.1.26", default-features = false }
sysinfo = "0.19.2"
combination = "0.1.5"
# arrayfire = "3.8.0"
sprs = "0.11.0"
ndarray = "0.15.3"
ndarray-linalg = {git = "https://github.com/Ojas-Singh/ndarray-linalg", branch = "master" , features = ["intel-mkl-static"] }



[dependencies.pyo3]
version = "0.14.5"
features = ["auto-initialize"]